--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,8 @@ h1,h2,h3,h4,h5{ margin:10px; font-size:16px}
 .description-head{
 	box-shadow:2px 2px 2px rgba(0,0,0,.5);
 	padding:1px;
-	background-color:lightgray;
+	background-color:#008000;
+	color:yellow;
 	font-family: myFirstFont;
 }
 
@@ -94,8 +95,8 @@ h1,h2,h3,h4,h5{ margin:10px; font-size:16px}
 	text-align:justify;
 	padding:10px;
 	margin-top:10px;
-	background-color:white;
-	box-shadow: inset 5px 0 0 #00BFFF;
+	background-color:#0BA80B;
+	color:white;
 	font-family: myFirstFont;
 }
 
@@ -240,7 +241,7 @@ h1,h2,h3,h4,h5{ margin:10px; font-size:16px}
   letter-spacing: 7px;
   color: #eee;
   border-bottom: 1px solid black;
-  background:#ADD8E6;
+  background:#0BA80B;
 }
 
 .navbar-fixed-top ,.navbar-fixed-bottom{
