--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,8 @@ h1,h2,h3,h4,h5{ margin:10px; font-size:16px}
 	text-align:justify;
 	padding:10px;
 	margin-top:10px;
-	background-color:white;
-	color:black;
+	background-color:#4fa630;
+	color:white;
 	font-family: myFirstFont;
 }
 
